force-app/main/default/objects/AI_Provider_Config__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Fully-qualified Apex class name for dynamic instantiation via Type.forName().</description>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>