force-app/main/default/objects/AI_Provider_Config__mdt/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <description>Comma-separated capabilities: spa_recommendation,dining_recommendation,upsell_recommendation,general_recommendation</description>
    <label>Capability</label>
    <length>500</length>
    <type>Text</type>
</CustomField>