force-app/main/default/objects/AI_Provider_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this provider is available for routing.</description>
    <label>Is Active</label>
    <required>true</required>
    <type>Checkbox</type>
</CustomField>