force-app/main/default/objects/AI_Provider_Config__mdt/fields/Max_Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Max_Latency_Ms__c</fullName>
    <description>Maximum allowed latency in milliseconds for this provider.</description>
    <label>Max Latency Ms</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>