force-app/main/default/objects/AI_Provider_Config__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Routing priority: 1 = highest, 999 = lowest.</description>
    <label>Priority</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>