force-app/main/default/objects/AI_Provider_Config__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <description>Provider identifier: VertexAI_Provider, OpenAI_Provider, etc.</description>
    <label>Provider Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>